图形合并异常1.0