@@ -32,6 +32,7 @@ import java.util.stream.Stream;
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletResponse;
 
+import cn.staitech.anno.project.domain.Marking;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -87,7 +88,6 @@ import cn.staitech.anno.vo.geojson.in.MarkingUpdateIn;
 import cn.staitech.anno.vo.geojson.in.UpdateOperationIn;
 import cn.staitech.anno.vo.geojson.in.ViewAddIn;
 import cn.staitech.anno.vo.markMeasure.MarkMeasure;
-import cn.staitech.anno.vo.marking.Marking;
 import cn.staitech.anno.vo.marking.MarkingSelectListVO;
 import cn.staitech.anno.vo.marking.PointCount;
 import cn.staitech.common.core.domain.PageResponse;
@@ -99,7 +99,7 @@ import lombok.extern.slf4j.Slf4j;
 
 /**
  * <p>
- * 标注测量表 服务实现类 
+ * 标注测量表 服务实现类
  * </p>
  *
  * @author wanglibei
@@ -126,8 +126,8 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 	private PathologicalIndicatorCategoryMapper pathologicalIndicatorCategoryMapper;
 	@Resource
 	private MarkMeasureMapper markMeasureMapper;
-	
-	
+
+
 	@Resource
 	private FileService fileService;
 	@Resource
@@ -136,7 +136,7 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 	private SysUserMapper userMapper;
 	@Resource
 	private ProjectMapperV1 projectMapperV1;
-	
+
 	@Resource
 	private DownTaskMapper downTaskMapper;
 	@Resource
@@ -222,29 +222,31 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 		MarkMeasure marking = trans2Marking(req);
 		SysUser sysUser = SecurityUtils.getLoginUser().getSysUser();
 //		SysUser sysUser = userMapper.selectUserById(1L);
-		
+
 		// 获取规定的geoJson Id
 		String annotationId = CustomizationIdUtils.getSdId();
-		Image image = getImageById(slideBy.getImageId().longValue());
-		marking.setAnnotation_id(annotationId);
-		if (req.getArea() != null) {
-			Double area = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
-			}else{
-				area = new Double(req.getArea()) * MICRON;
-			}
-			marking.setArea(String.valueOf(area));
-		}
-		if (req.getPerimeter() != null) {
-			Double perimeter = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
-			}else{
-				perimeter = new Double(req.getPerimeter()) * MICRON;
-			}
-			marking.setPerimeter(String.valueOf(perimeter));
-		}
+//		Image image = getImageById(slideBy.getImageId().longValue());
+//		marking.setAnnotation_id(annotationId);
+//		if (req.getArea() != null) {
+//			Double area = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				area = new Double(req.getArea()) * MICRON;
+//			}
+//			marking.setArea(String.valueOf(area));
+//		}
+//		if (req.getPerimeter() != null) {
+//			Double perimeter = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				perimeter = new Double(req.getPerimeter()) * MICRON;
+//			}
+//			marking.setPerimeter(String.valueOf(perimeter));
+//		}
+		marking.setPerimeter(req.getPerimeter());
+		marking.setArea(req.getArea());
 		// 若未传入标注作者,使用当前登录用户为标注作者==>必传Create_by 无默认
 		marking.setCreate_by(req.getCreate_by());
 		marking.setAnnotation_type("Measure");
@@ -272,18 +274,20 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 		}
 		marking.setNumber(number);
 		marking.setProject_id(Long.valueOf(slideBy.getProjectId()));
-		
+
 //		Snowflake snowflake = new Snowflake();
 //		String markMeasureId = snowflake.nextIdStr();
 		String markMeasureId = IdUtils.randomUUID().replace("-", "");
 		marking.setMark_measure_id(markMeasureId);
 		// 添加数据库，添加后返回自增id
 		markMeasureMapper.insert(marking);
-		
+
 		Properties properties = markMeasureMapper.selectBy(marking.getMark_measure_id());
 		Features features = MarkingUtils.socketData(annotationId, marking.getGeometry(), properties);
 		// 如果是点类型，返回点的总数并返回
-		BroadcastVO broadcastVO = SendMessage.sendOneMessagesByAnnoType(CommonConstant.ANNO_TYPE_MEASURE,ADD_STATUS, features);
+		List<PointCount> pointCountList = updatePoint(marking.getLocation_type(), marking);
+//		BroadcastVO broadcastVO = SendMessage.sendOneMessagesByAnnoType(CommonConstant.ANNO_TYPE_MEASURE,ADD_STATUS, features);
+		BroadcastVO broadcastVO = SendMessage.sendListMessages(CommonConstant.ANNO_TYPE_MEASURE,ADD_STATUS, features, pointCountList);
 
 		NioWebSocketHandler.sendAll(req.getSlide_id(), broadcastVO);
 
@@ -324,13 +328,15 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 		if (!Objects.equals(markingBy.getCreate_by(), SecurityUtils.getUserId()) && Objects.equals(project.getProjectType(), "3")){
 			throw new Exception(MessageSource.M("MARKINGSERVICEIMPL_UPDATE_MAN"));
 		}
-		
+
 		SysUser sysUser = SecurityUtils.getLoginUser().getSysUser();
 //		SysUser sysUser = userMapper.selectUserById(1L);
-		String location = MarkingUtils.updateVerify(markingBy.getGeometry(),req.getGeometry(),req.getOperation(),req.getCheck());
-		JSONObject jsonObject = JSONObject.parseObject(WktUtil.wktToJson(location));
+		Marking markingBys = MarkingUtils.updateVerify(markingBy.getGeometry(),req.getGeometry(),req.getOperation(),req.getCheck(), req.getResolution());
+		JSONObject jsonObject = JSONObject.parseObject(WktUtil.wktToJson(markingBys.getMarkingId()));
 		MarkMeasure marking = new MarkMeasure();
 		marking.setGeometry(jsonObject);
+		marking.setArea(markingBys.getArea());
+		marking.setPerimeter(markingBys.getPerimeter());
 		marking.setMark_measure_id(req.getMarking_id());
 		marking.setUpdate_by(sysUser.getUserId());
 		marking.setUpdate_time(new Date());
@@ -360,9 +366,9 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 		if (!Objects.equals(markingBy.getCreate_by(), sysUser.getUserId()) && Objects.equals(project.getProjectType(), "3")){
 			throw new Exception(MessageSource.M("MARKINGSERVICEIMPL_UPDATE_MAN"));
 		}
-		
 
-		
+
+
 		// 查询切片表中信息==》先走缓存
 		Slide slide = redisService.getCacheObject(CommonConstant.ANNO_SLIDE+markingBy.getSlide_id());
 		if(null == slide){
@@ -398,25 +404,27 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 			Double perimeter = new Double(req.getPerimeter()) * MICRON;
 			marking.setPerimeter(String.valueOf(perimeter));
 		}*/
-		Image image = getImageById(slide.getImageId().longValue());
-		if (req.getArea() != null) {
-			Double area = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
-			}else{
-				area = new Double(req.getArea()) * MICRON;
-			}
-			marking.setArea(String.valueOf(area));
-		}
-		if (req.getPerimeter() != null) {
-			Double perimeter = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
-			}else{
-				perimeter = new Double(req.getPerimeter()) * MICRON;
-			}
-			marking.setPerimeter(String.valueOf(perimeter));
-		}
+//		Image image = getImageById(slide.getImageId().longValue());
+//		if (req.getArea() != null) {
+//			Double area = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				area = new Double(req.getArea()) * MICRON;
+//			}
+//			marking.setArea(String.valueOf(area));
+//		}
+//		if (req.getPerimeter() != null) {
+//			Double perimeter = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				perimeter = new Double(req.getPerimeter()) * MICRON;
+//			}
+//			marking.setPerimeter(String.valueOf(perimeter));
+//		}
+		marking.setPerimeter(req.getPerimeter());
+		marking.setArea(req.getArea());
 		List<PointCount> pointCountList = updatePoint(markingBy.getLocation_type(), markingBy);
 		// 修改轮廓时，轮廓为空
 		if(req.getCategory_id() == null && req.getDescription() == null){
@@ -447,8 +455,8 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 
 		// 使用websocket发送数据
 		NioWebSocketHandler.sendAll(markingBy.getSlide_id(), broadcastVO);
-
-		annExecutor.submit(new AnnCountThread(2,slide,marking));
+		MarkMeasure	markingNew = markMeasureMapper.selectById(req.getMarking_id());
+		annExecutor.submit(new AnnCountThread(2,slide,markingNew));
 
 		return markingBy.getMark_measure_id();
 	}
@@ -709,39 +717,39 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 			}
 		}
 	}
-	
+
 	public void process(Integer type,Slide slide,MarkMeasure marking) throws Exception{
 
-		   Long slideId = marking.getSlide_id();
-		   String markIngId = marking.getMark_measure_id();
-		   //String annotationId = marking.getAnnotation_id();
-		   Long createBy = marking.getCreate_by();
-		   Long categoryId = marking.getCategory_id();
+		Long slideId = marking.getSlide_id();
+		String markIngId = marking.getMark_measure_id();
+		//String annotationId = marking.getAnnotation_id();
+		Long createBy = marking.getCreate_by();
+		Long categoryId = marking.getCategory_id();
 
-			//增加缓存
-			redisService.setCacheObject(CommonConstant.ANNO_MARKING+markIngId, marking, CommonConstant.MARKING_CACHE_HOURS, TimeUnit.HOURS);
+		//增加缓存
+		redisService.setCacheObject(CommonConstant.ANNO_MARKING+markIngId, marking, CommonConstant.MARKING_CACHE_HOURS, TimeUnit.HOURS);
 
-			// 判断切片状态是否是未开始
-			if (Objects.equals(slide.getStatus(), "1")) {
-				// 更新切片表中状态至切片中
-				slide.setStatus("2");
-				slideMapperV1.updateById(slide);
-			}
+		// 判断切片状态是否是未开始
+		if (Objects.equals(slide.getStatus(), "1")) {
+			// 更新切片表中状态至切片中
+			slide.setStatus("2");
+			slideMapperV1.updateById(slide);
+		}
 
-			// 更新切片表中最新状态
-			updateSLide(slideId);
-			if(type == 2){
-				//修改
-				slideAttrService.removeAnnoUsers(slideId, Collections.singletonList(createBy));
-				slideAttrService.removeAnnoCategory(slideId, Collections.singletonList(categoryId));
-			}
-			slideAttrService.saveAnnoUsers(slideId, Collections.singletonList(createBy));
-			if (categoryId != null) {
-				slideAttrService.saveAnnoCategory(slideId, Collections.singletonList(categoryId));
-			} else {
-				slideAttrService.saveAnnoCategory(slideId, new ArrayList<>());
-			}
-	   }
+		// 更新切片表中最新状态
+		updateSLide(slideId);
+		if(type == 2){
+			//修改
+			slideAttrService.removeAnnoUsers(slideId, Collections.singletonList(createBy));
+			slideAttrService.removeAnnoCategory(slideId, Collections.singletonList(categoryId));
+		}
+		slideAttrService.saveAnnoUsers(slideId, Collections.singletonList(createBy));
+		if (categoryId != null) {
+			slideAttrService.saveAnnoCategory(slideId, Collections.singletonList(categoryId));
+		} else {
+			slideAttrService.saveAnnoCategory(slideId, new ArrayList<>());
+		}
+	}
 
 
 	private MarkMeasure trans2Marking(ViewAddIn view){
@@ -871,7 +879,7 @@ public class MarkMeasureServiceImpl extends ServiceImpl<MarkMeasureMapper, MarkM
 		}
 		return marking;
 	}
-	
+
 	public Image getImageById(Long imageId){
 		Image image = redisService.getCacheObject(CommonConstant.ANNO_IMAGE+imageId);
 		if(null == image){
